[tool.poetry]
name = "hass-xiaomi-miot"
version = "0.7.20"
description = ""
authors = ["Alone <hi@anlo.ng>"]
readme = "README.md"
packages = [{ include = "custom_components/xiaomi_miot" }]

[tool.poetry.dependencies]
construct = "^2.10.68"
python-miio = "^0.5.12"
python = ">=3.12.0,<3.13"
micloud = "^0.5"
homeassistant = "^2024.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
